--- a/92-appendixC.Rmd
+++ b/92-appendixC.Rmd
@@ -413,6 +413,13 @@ knitr::include_graphics(paste0("resources/naomi-aghq/", resource_version, "/depe
 knitr::include_graphics(paste0("resources/naomi-aghq/", resource_version, "/depends/marginal-sd.png"))
 ```
 
+(ref:lognormconst) The logarithm of the normalising constant estimated using PCA-AGHQ and a range of possible values of $k = 2, 3, 5$ and $s \leq 8$. Using this range of settings, there was not convergence of the logarithm of the normalsing constant estimate. The time taken by GPCA-AGHQ increases exponentially with number of PCA-AGHQ dimensions kept.
+
+```{r lognormconst, fig.cap="(ref:lognormconst)"}
+knitr::include_graphics(paste0("resources/naomi-aghq/", resource_version, "/depends/lognormconst.png"))
+```
+
+
 ## Inference comparison
 
 ### Point estimates
