Another figure on this, the day of my thesis submission

--- a/06-naomi-aghq.Rmd
+++ b/06-naomi-aghq.Rmd
@@ -1510,11 +1510,19 @@ Latent field point estimates obtained from GPCA-AGHQ closer to the gold-standard
 
 #### Distributional quantities
 
-(ref:ks-summary) The average Kolmogorov-Smirnov (KS) test statistic for each latent field parameter of the Naomi model.
+(ref:ks-summary) The average Kolmogorov-Smirnov (KS) test statistic for each latent field parameter of the Naomi model. Vectors of parameters were grouped together. For points above the dashed line at zero, performance of GEB was better. For points below the dashed line, performance of GPCA-AGHQ was better.
 
 ```{r ks-summary, fig.cap="(ref:ks-summary)"}
 knitr::include_graphics(paste0("resources/naomi-aghq/", resource_version, "/depends/ks-summary.png"))
 ```
+
+(ref:ui-lambda-x) Figure caption.
+
+```{r ui-lambda-x, fig.cap="(ref:ui-lambda-x)"}
+knitr::include_graphics(paste0("resources/naomi-aghq/", resource_version, "/depends/ui-lambda-x.png"))
+```
+
+Error as measured by the KS test statistic was correlated with low NUTS ESS (Figure \@ref(fig:ks-ess)).
 
 ### Exceedance probabilities
 
