--- a/01-introduction.Rmd
+++ b/01-introduction.Rmd
@@ -80,7 +80,7 @@ knitr::include_graphics("figures/introduction/gbd.png")
 
 The data used were gathered in national household surveys or routinely collected from healthcare facilities providing HIV services.
 An important feature of these data are the location and time at which observations were recorded.
-Spatio-temporal data have important recurring commonalities which occur across a diverse range of application settings.
+Spatio-temporal data have important recurring commonalities across a diverse range of application settings.
 The work conducted in this thesis uses, and aspires to contribute to, techniques from spatio-temporal statistics.
 
 Computation is an essential part of modern statistical practice.
@@ -95,15 +95,16 @@ This thesis is structured as follows:
 * Chapter \@ref(bayes-st) introduces the statistical concepts and notation used throughout the thesis, focusing on Bayesian modelling and computation, spatio-temporal statistics, and survey methods.
 * Chapter \@ref(beyond-borders): The prevailing model for spatial structure used in small-area estimation [@besag1991bayesian] was intended to analyse a grid of pixels.
 In disease mapping, areas correspond to the administrative divisions of a country, which are typically not a grid.
-I used a simulation and survey data studies to evaluate the practical consequences of this concern 
+I used simulation and survey data studies to evaluate the practical consequences of this concern 
 * Chapter \@ref(multi-agyw): Adolescent girls and young women are a demographic group at disproportionate risk of acquiring HIV infection.
 The Global AIDS Strategy recommends prioritising interventions on the basis of behaviour to prevent the most new infections using available resources.
 I estimated the size of behavioural risk groups across priority countries to enable implementation of this strategy, and assessed the potential benefits in terms of numbers of new infections prevented.
 This work [@howes2023spatio] was included in the UNAIDS (Joint United Nations Programme on HIV/AIDS) Global AIDS Update 2022 and 2023.
 * Chapter \@ref(naomi-aghq): The Naomi small-area estimation model [@eaton2021naomi] is used by countries to estimate district-level HIV indicators.
 First, to allow for compatibility with Naomi, I implemented the integrated nested Laplace approximations using automatic differentiation, opening the door to a new class of fast, flexible, and accurate Bayesian inference algorithms.
+The implementation was using models for a clinical trial of an epilepsy drug, and for the prevalence of the parasitic worm Loa loa.
 Second, I developed an approximate Bayesian inference method combining adaptive Gauss-Hermite quadrature with principal components analysis.
 I applied these method to data from Malawi, and analysed the consequences of inference method choice for policy relevant outcomes.
-* Chapter \@ref(conclusions): Finally, I discuss avenues for future work, and my conclusions regarding the research, as well as its strengths and weaknesses.
+* Chapter \@ref(conclusions): Finally, I discuss contributions of the research, avenues for future work, and some broader reflections.
 
 Though chronological order is recommended, Chapters \@ref(beyond-borders), \@ref(multi-agyw) and \@ref(naomi-aghq) may be read in any order, or as stand-alone studies, if preferred.
