--- a/03-bayesian.Rmd
+++ b/03-bayesian.Rmd
@@ -243,12 +243,6 @@ In combination, large data (big $n$) and models with a large number of parameter
 
 ### Small-area estimation {#small-area-estimation}
 
-Data always has some cost to collect.
-This cost can be significant and prohibitive, especially for data relating to people where collection is difficult to automate.
-In spatio-temporal statistics, there are a large number of possible locations in space and time.
-Given the cost of data collection, often no or limited direct observations may be available for any given space-time location.
-Direct estimates of indicators of interest are either impossible or inaccurate in this setting.
-
 (ref:zmb-maps) Simulation of a simple random sample $y_i \sim \text{Bin}(m, p_i)$ with varying sample size $m = 5, 25, 125$ in each of the $i = 1, \ldots, 156$ constituencies of Zambia. Direct estimates were obtained by the empirical ratio of data to sample size. Modelled estimates were obtained using a logistic regression with linear predictor given by an intercept and a spatial random effect. Estimates of HIV indicators for Zambia have previously been generated at the district-level, comprising 116 spatial units. Moving forward, there is interest in generating estimates at the higher-resolution constituency level, as program planning is devolved locally. The viridis colour palette, as implemented by the `viridis` R package [@viridis], was used in this figure. It is use often throughout this thesis because it is perceptually uniform and accessible to colourblind viewers [@smith2015better]. This figure was adapted from a presentation given for the Zambia HIV Estimates Technical Working Group, available from [`https://github.com/athowes/zambia-unaids`](https://github.com/athowes/zambia-unaids).
 
 ```{r zmb-maps, fig.cap="(ref:zmb-maps)"}
@@ -260,6 +254,13 @@ knitr::include_graphics("figures/bayesian/zmb-maps.png")
 ```{r zmb-scatter, fig.cap="(ref:zmb-scatter)"}
 knitr::include_graphics("figures/bayesian/zmb-scatter.png")
 ```
+
+Data always has some cost to collect.
+This cost can be significant and prohibitive.
+Especially for data relating to people, where collection is difficult to automate.
+In spatio-temporal statistics, there are a large number of possible locations in space and time.
+Given the cost of data collection, often no or limited direct observations may be available for any given space-time location.
+Direct estimates of indicators of interest are either impossible or inaccurate in this setting.
 
 Small-area estimation [SAE; @pfeffermann2013new] methods aim to overcome the limitations of small data by sharing information.
 In the spatio-temporal setting sharing of information occurs across space and time.
