--- a/92-appendixC.Rmd
+++ b/92-appendixC.Rmd
@@ -61,7 +61,7 @@ knitr::include_graphics("figures/naomi-aghq/loa-loa-mean-sd-pct.png")
 
 \newpage
 
-## Algorithms {#algorithms}
+## AGHQ with Laplace marginals algorithm {#algorithm}
 
 This section provides the INLA-like algorithm for AGHQ with Laplace marginals used in this thesis.
 The algorithm for AGHQ with Gaussian marginals used in this thesis is as given in @stringer2022fast, and implemented in the `aghq` package.
