--- a/references.bib
+++ b/references.bib
@@ -1185,6 +1185,13 @@
   note = {R package version 0.0.1}
 }
 
+@manual{howes2023multiutils,
+  title = {multi.utils: Utility functions for multi-agyw},
+  author = {Adam Howes},
+  year = {2023},
+  note = {R package version 0.1.0},
+}
+
 @article{howes2023beyond,
   title = {{Beyond borders: evaluating the suitability of spatial adjacency for small-area estimation}},
   author = {Howes, Adam and Eaton, Jeffrey W. and Flaxman, Seth R.},
