--- a/04-beyond-borders.Rmd
+++ b/04-beyond-borders.Rmd
@@ -315,12 +315,7 @@ This choice results in the centroid kernel
 \begin{equation}
     K(A_i, A_j) = k(c_i, c_j). (\#eq:ck)
 \end{equation}
-The centroid kernel has been used:
-
-* in environmental epidemiology [@wakefield1999spatial];
-* for US election modelling [@flaxman2015supported];
-* to model the reproduction number of COVID-19 [@teh2021efficient].
-
+The centroid kernel has been used in environmental epidemiology [@wakefield1999spatial], for US election modelling [@flaxman2015supported], and to model the reproduction number of COVID-19 [@teh2021efficient].
 In a model comparison study @best2005comparison (Section 3) simulated data representing heterogeneous exposure to air pollution, including elevated rates of exposure near two hypothetical point source locations, and found that the centroid kernel tended to over-smooth the high-risk areas.
 That said, it unsurprising that a stationary covariance function would struggle to recover non-stationary structure.
 
@@ -337,7 +332,7 @@ This covariance structure is equivalent to that obtained by aggregating a spatia
 In the machine learning literature, models of this kind have been studied under the name aggregated Gaussian processes [@law2018variational; @tanaka2019spatially; @yousefi2019multi; @hamelijnck2019multi; @chau2021deconditional].
 Examples of use of this model in statistical practice are rare.
 
-#### Accounting for heterogeneity
+#### Accounting for heterogeneity {#ik-hetrogeneity}
 
 Additional information accounting for heterogeneity over $A_i$ may be incorporated into the integrated kernel.
 This can be accomplished using weighting distributions $\{w_i\}$ which represent an unequal contribution of each point to the similarity measure.
@@ -501,7 +496,7 @@ The sensitivity analysis in Appendix \@ref(lengthscale-prior) illustrates the ex
 
 Approximate Bayesian inference was conducted using adaptive Gauss-Hermite quadrature [AGHQ; @stringer2022fast] with $k = 3$ quadrature points over a marginal Laplace approximation via the `aghq` package [@stringer2021implementing].
 Models were implemented using a Template Model Builder C++ template for the log-posterior via the `TMB` package [@kristensen2016tmb].
-Appendix \@ref(aghq-nuts) compares posterior mean and standard deviations from AGHQ to those obtained using the No-U-Turn Sampling (NUTS) Hamiltonian Monte Carlo (HMC) algorithm run using `Stan` [@carpenter2017stan] via the `tmbstan` package [@monnahan2018no].
+Appendix \@ref(aghq-nuts) compares posterior mean and standard deviations from AGHQ to those obtained using the No-U-Turn Sampler (NUTS) Hamiltonian Monte Carlo (HMC) algorithm run using `Stan` [@carpenter2017stan] via the `tmbstan` package [@monnahan2018no].
 
 ### Model assessment {#model-assessment}
 
@@ -513,11 +508,10 @@ Let $\omega$ be the true value of $\phi$ used in the simulation.
 The accuracy of latent field parameter and hyperparameter posterior marginals from each model were assessed using three methods.
 These were the mean squared error (MSE), the continuous ranked probability score [CRPS; @matheson1976scoring], and the calibration.
 
-The MSE is a simple and popular measure given by
+The MSE is a simple and popular measure, calculated using samples as
 \begin{equation}
 \text{MSE}(f, \omega) \approx \frac{1}{S} \sum_{s = 1}^S (\phi_s - \omega)^2.
 \end{equation}
-
 The CRPS is a strictly proper scoring rule (SPSR) which has favourable properties and is often regarded as a default choice [@gneiting2007strictly].
 Any scoring rule which is not strictly proper rewards a misrepresentation of beliefs.
 The CRPS is
@@ -740,6 +734,8 @@ The work in this chapter does not address the broader question of under which ci
 
 The models used for spatial structure in this chapter were all stationary.
 Although stationarity assumptions may be violated by HIV survey data, it remains challenging to estimate non-stationary spatial structure [@paciorek2006spatial].
+
+It would be of interest to implement the integrated kernel model with population-based weighting (Section \@ref(ik-hetrogeneity)).
 
 <!-- * What are my suggestions for new models to develop on the basis of this work -->
 <!-- * GMRFs perform smoothing more locally -->
